@@ -12,6 +12,7 @@
 	  Also, for wildcard name NSECs, check they are not from the parent
 	  zone (for wildcarded zone cuts), and check absence of CNAME bit,
 	  for a nodata proof.
+	- configure option for memory allocation debugging.
 
 4 September 2007: Wouter
 	- fixup of Leakage warning when serviced queries processed multiple
